# dad-can-i-wear-this

./: .env.example  Dockerfile  PROJECT_SPECIFICATION.md  README.md  docker-compose.yml  docker-entrypoint.sh  hello.py  justfile  pyproject.toml  requirements.txt
.forgejo/workflows/: build.yml
app/: __about__.py  llm.py  main.py  models.py  pydantic_ai_integration.py  safety.py  temperature_api.py  weather.py
app/static/css/: style.css
app/static/js/: chart.js  temperature-graph.js
app/templates/: base.html  index.html  weather_response.html
